[gd_scene load_steps=24 format=2]

[ext_resource path="res://InterrogationPaper.tscn" type="PackedScene" id=1]
[ext_resource path="res://desktop0.gd" type="Script" id=2]
[ext_resource path="res://photo.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/pngwing.com.png" type="Texture" id=4]
[ext_resource path="res://note.tscn" type="PackedScene" id=5]
[ext_resource path="res://InterrogationFontTheme.tres" type="Theme" id=6]
[ext_resource path="res://assets/RobotoSlab-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/phone.png" type="Texture" id=8]
[ext_resource path="res://assets/circle_05.png" type="Texture" id=9]
[ext_resource path="res://assets/open.png" type="Texture" id=10]
[ext_resource path="res://assets/1285977495.png" type="Texture" id=11]
[ext_resource path="res://assets/1285977495b.png" type="Texture" id=12]
[ext_resource path="res://assets/beige-wooden-textured-flooring-background.jpg" type="Texture" id=13]
[ext_resource path="res://assets/ShantellSans-Medium.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/title.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=9]
size = 72
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=3]
Button/fonts/font = SubResource( 9 )
Label/fonts/font = SubResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
Button/fonts/font = SubResource( 4 )
Label/fonts/font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=7]
size = 72
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=8]
Button/fonts/font = SubResource( 7 )
Label/fonts/font = SubResource( 7 )

[node name="Desktop" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.956863, 0.894118, 0.756863, 1 )
texture = ExtResource( 13 )
centered = false

[node name="Envelope2" type="Sprite" parent="."]
position = Vector2( 236, 169 )
rotation = 0.451513
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="Photo1" parent="." instance=ExtResource( 3 )]
position = Vector2( 272, 113 )
rotation = 0.401733
scale = Vector2( 0.5, 0.5 )

[node name="Folder1" type="Sprite" parent="."]
self_modulate = Color( 0.466667, 0.54902, 0.447059, 1 )
position = Vector2( 918.725, 152.482 )
rotation = -0.388464
texture = ExtResource( 12 )

[node name="1285977495" type="Sprite" parent="Folder1"]
self_modulate = Color( 0.603922, 0.709804, 0.576471, 1 )
texture = ExtResource( 11 )

[node name="Photo2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1595, 372 )
rotation = -0.245694
scale = Vector2( 0.5, 0.5 )

[node name="Photo3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1501, 310 )
rotation = 0.265247
scale = Vector2( 0.5, 0.5 )

[node name="Photo6" parent="." instance=ExtResource( 3 )]
position = Vector2( 954, 146 )
rotation = -0.0575886
scale = Vector2( 0.5, 0.5 )

[node name="Note2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1054, 100 )
rotation = 0.119884
scale = Vector2( 0.5, 0.5 )

[node name="Post-it" parent="Note2" index="0"]
modulate = Color( 0.937255, 0.490196, 0.866667, 1 )

[node name="Label" parent="Note2" index="1"]
text = "Suspected  liar?"

[node name="Note3" parent="." instance=ExtResource( 5 )]
position = Vector2( 145, 157 )
rotation = -0.395071
scale = Vector2( 0.5, 0.5 )

[node name="Label" parent="Note3" index="1"]
text = "A BFF will never lie :)"

[node name="Envelope" type="Sprite" parent="."]
position = Vector2( 1311, 158 )
rotation = -0.226893
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="Photo4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1450, 148 )
rotation = -0.361073
scale = Vector2( 0.5, 0.5 )

[node name="Photo5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1518, 143 )
rotation = 0.149869
scale = Vector2( 0.5, 0.5 )

[node name="IntroPaper0" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
visible = false
position = Vector2( -112, 221 )

[node name="Name2" type="Label" parent="IntroPaper0"]
visible = false
margin_left = 257.0
margin_top = 175.0
margin_right = 823.0
margin_bottom = 292.0
mouse_filter = 0
theme = ExtResource( 6 )
text = "Amber A. is a bad person and this line will take two lines and then even a third oneAmber A. is a bad person and this line will take two lines and then even a third oneAmber A. is a bad person and this line will take two lines and then even a third one"
autowrap = true

[node name="RichTextLabel" type="RichTextLabel" parent="IntroPaper0"]
unique_name_in_owner = true
margin_left = 257.0
margin_top = 175.0
margin_right = 827.0
margin_bottom = 661.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "Loading top scores.
Enter your name above to participate."
text = "Loading top scores.
Enter your name above to participate."

[node name="FX" type="Node2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="FX"]
color = Color( 0.701961, 0.701961, 0.701961, 1 )

[node name="Light2D" type="Light2D" parent="FX"]
position = Vector2( 844, 276 )
texture = ExtResource( 9 )
texture_scale = 8.0
energy = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="Dim" type="ColorRect" parent="FX"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1600.0
margin_bottom = 900.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_lock_": true
}

[node name="PhoneBG" type="Sprite" parent="."]
visible = false
position = Vector2( 1128, 721 )
texture = ExtResource( 8 )

[node name="Folder2" type="Sprite" parent="."]
modulate = Color( 0.788235, 0.262745, 0.262745, 1 )
self_modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
position = Vector2( 627.071, 516.756 )
rotation = 0.0872665
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 12 )

[node name="1285977495" type="Sprite" parent="Folder2"]
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Folder2"]
visible = false
margin_left = -217.68
margin_top = -44.196
margin_right = 230.32
margin_bottom = 289.804
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SUSPECTS"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 246.071
margin_top = 240.756
margin_right = 1047.07
margin_bottom = 806.755
rect_rotation = 5.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "The
Strand Academy
Secrets"
align = 1
valign = 1

[node name="Title" type="Sprite" parent="."]
position = Vector2( 622, 496 )
rotation = 0.0872665
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 15 )

[node name="Intro" type="Node2D" parent="."]
visible = false

[node name="Pngwingcom" type="Sprite" parent="Intro"]
position = Vector2( 583, 242 )
rotation = -0.0523599
scale = Vector2( 0.504219, 0.504219 )
texture = ExtResource( 4 )

[node name="Label2" type="Label" parent="Intro"]
margin_top = 187.0
margin_right = 1600.0
margin_bottom = 487.0
theme = SubResource( 2 )
align = 1
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="Intro/Label2"]
unique_name_in_owner = true
margin_left = 415.0
margin_top = 39.0
margin_right = 755.0
margin_bottom = 139.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "Sherlock"
align = 1
max_length = 12
context_menu_enabled = false
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "Your name"
caret_blink = true

[node name="ButtonNext" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 1011.0
margin_top = 776.0
margin_right = 1275.0
margin_bottom = 881.0
theme = ExtResource( 6 )
text = "Next"

[node name="Label2" type="Label" parent="."]
visible = false
margin_top = 200.0
margin_right = 1600.0
margin_bottom = 500.0
theme = SubResource( 8 )
align = 1
valign = 1
uppercase = true

[editable path="Note2"]
[editable path="Note3"]
